feat: refactor naming conventions in codebase
- Rename `menu` to `items` in files `BUILD.bazel` and `api.go`
- Update references from `menu` to `items` in files `BUILD.bazel` and `api.go`
- Add a new endpoint to get an item by id in the `api.go` file
