# api/restaurant/restful/restaurant_restful_swagger.json
@@ -212,9 +212,9 @@
                 }
             }
         },
-        "/v1/restaurants/{restaurant_id}/menu": {
+        "/v1/restaurants/{restaurant_id}/items": {
             "get": {
-                "description": "Get the menu list.",
+                "description": "Get the items list.",
                 "consumes": [
                     "application/json"
                 ],
@@ -222,9 +222,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "menu"
+                    "items"
                 ],
-                "summary": "Get the menu list.",
+                "summary": "Get the items list.",
                 "parameters": [
                     {
                         "type": "string",
@@ -286,7 +286,7 @@
                 }
             },
             "post": {
-                "description": "Add a menu item.",
+                "description": "Add a items item.",
                 "consumes": [
                     "application/json"
                 ],
@@ -294,9 +294,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "menu"
+                    "items"
                 ],
-                "summary": "Add a menu item.",
+                "summary": "Add a items item.",
                 "parameters": [
                     {
                         "type": "string",
@@ -306,13 +306,70 @@
                         "required": true
                     },
                     {
-                        "description": "menu item payload",
+                        "description": "items item payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/menu.PostPayload"
+                            "$ref": "#/definitions/items.PostPayload"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/responsex.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/github_com_blackhorseya_godine_entity_restaurant_model.MenuItem"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responsex.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/restaurants/{restaurant_id}/items/{item_id}": {
+            "get": {
+                "description": "Get the items item by id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "items"
+                ],
+                "summary": "Get the items item by id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "restaurant id",
+                        "name": "restaurant_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "item id",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -423,7 +480,7 @@
                 }
             }
         },
-        "menu.PostPayload": {
+        "items.PostPayload": {
             "type": "object",
             "required": [
                 "name",
@@ -436,7 +493,7 @@
                 },
                 "name": {
                     "type": "string",
-                    "example": "menu item name"
+                    "example": "items item name"
                 },
                 "price": {
                     "type": "number",
